--- a/kbuildclient/public/index.html
+++ b/kbuildclient/public/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="Website to help you build your mechanical keyboard!" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
 		<title>KBuild</title>
 	</head>
 	<body>
